--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: DarrowIT Homepage
-description: This is an overview page showing all personal projects. Enjoy!
+title: Homepage
+description: This is an overview page showing all my personal projects. Enjoy!
